--- a/reactAPI/package.json
+++ b/reactAPI/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt-nodejs": "^0.0.31",
     "nodemon": "^3.1.4"
   },
   "dependencies": {
