--- a/reactAPI/package.json
+++ b/reactAPI/package.json
@@ -1,7 +1,6 @@
 {
   "name": "reactapi",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "start": "nodemon script.js"
@@ -22,5 +21,10 @@
     "knex": "^3.1.0",
     "npm": "^10.8.1",
     "pg": "^8.12.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "FacialRecognitionAPI"
+  },
+  "description": ""
 }
